# costly

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  examples.ipynb  pyproject.toml
.costly/: costlog.jsonl  costlog_2024-08-26_23-06-40.jsonl  costlog_2024-08-26_23-13-10.jsonl  costlog_2024-08-26_23-13-59.jsonl  costlog_2024-08-26_23-52-52.jsonl  costlog_2024-08-28_14-47-42.jsonl  costlog_2024-08-28_16-45-34.jsonl  costlog_2024-08-28_18-25-58.jsonl
.github/workflows/: publish.yml
costly/: __init__.py  costlog.py  decorator.py  decorators.py  llm_api_estimation.py  simulators.py  updatable_default.py  utils.py
costly/estimators/: llm_api_estimation.py
costly/simulators/: faker_factory.py  llm_simulator.py  llm_simulator_faker.py
tests/: example_functions.py  test_costlog.jsonl  test_costlog.py  test_costlog.totals.json  test_costlog.totals_by_model.json  test_costlog_async.jsonl  test_costlog_async.totals.json  test_costlog_async.totals_by_model.json  test_decorator.py  test_decorators.py  test_global.py
tests/test_estimators/: test_llm_api_estimation.py
tests/test_simulators/: test_llm_simulator_faker.py
