[project]
name = "costly"
version = "2.3.5"
description = "Estimate costs and running times of complex LLM workflows/experiments/pipelines in advance before spending money, via simulations."
authors = [{ name = "abhimanyu", email = "abhimanyupallavisudhir@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "Faker>=28.0.0,<29",
    "pydantic>=2.8.2,<3",
    "jsonlines>=4.0.0,<5",
    "typing-extensions>=4.12.2,<5",
    "python-dotenv",
    "tiktoken>=0.7.0,<0.8",
    "pytest>=8.1.1,<9",
    "pytest-asyncio>=0.23.7,<0.24",
    "pytest-env>=1.1.3,<2",
    "pytest-mock>=3.14.0,<4",
    "openai>=1.45.1,<2",
    "instructor>=1.4.2",
    "litellm>=1.59.6,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not slow'"
